add heading and hyperlink

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
     <nav>
         <ul>
-            <li>home</li>
-            <li>about</li>
-            <li>contact</li>
+            <li><a href="/">home</a></li>
+            <li><a href="about.html">about</a></li>
+            <li><a href="contact.html">contact</a></li>
         </ul>
     </nav>
+
+    <h1>HOME</h1>
 
     <footer>
         <p>ini footer copyright by <a href="#">Romy</a></p>
