--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="home.html">home</a></li>
+            <li><a href="index.html">home</a></li>
             <li><a href="/">about</a></li>
             <li><a href="contact.html">contact</a></li>
         </ul>
