On branch master Changes to be committed: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <h1>HOME</h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae blanditiis voluptatum quaerat eaque
+        perferendis. Asperiores hic distinctio aperiam enim aspernatur labore blanditiis commodi aut saepe, vel quo
+        ipsam nisi quam?</p>
+
     <footer>
         <p>ini footer copyright by <a href="#">Romy</a></p>
     </footer>
